--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.4.1",
+    "chokidar": "^3.4.0",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.1",
     "tilt.js": "^1.2.1"
